// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a valid plugin AppItem in view mode 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Dashboard plugin
    </p>
    <div
      class="itemHeaderRightWrap"
    >
      <div
        class="itemActionsWrap"
      >
        <div
          class="ItemContextMenu"
        />
      </div>
    </div>
  </div>
  <div
    class="content"
  >
    <div
      cacheid="some-dashboard-rainbowdash"
      class="MockPlugin"
      dashboarditemfilters="empty object"
      dashboarditemid="rainbowdash"
      dashboardmode="view"
      data-height="NaNpx"
      data-plugin-source="https://plugin/iframe/url"
      data-width="undefinedpx"
      setdashboarditemdetails="function"
    />
  </div>
</div>
`;

exports[`renders a valid plugin AppItem with filter in edit mode 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Dashboard plugin
    </p>
    <div
      class="itemHeaderRightWrap"
    >
      <div
        class="itemActionsWrap"
      >
        <div
          class="DeleteItemButton"
        />
      </div>
    </div>
  </div>
  <div
    class="content"
  >
    <div
      cacheid="some-dashboard-rainbowdash"
      class="MockPlugin"
      dashboarditemfilters="empty object"
      dashboarditemid="rainbowdash"
      dashboardmode="edit"
      data-height="NaNpx"
      data-plugin-source="https://plugin/iframe/url"
      data-width="undefinedpx"
      setdashboarditemdetails="function"
    />
  </div>
</div>
`;

exports[`renders a valid plugin AppItem with filter in view mode 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Dashboard plugin
    </p>
    <div
      class="itemHeaderRightWrap"
    >
      <div
        class="itemActionsWrap"
      >
        <div
          class="ItemContextMenu"
        />
      </div>
    </div>
  </div>
  <div
    class="content"
  >
    <div
      cacheid="some-dashboard-rainbowdash"
      class="MockPlugin"
      dashboarditemfilters="[object Object]"
      dashboarditemid="rainbowdash"
      dashboardmode="view"
      data-height="NaNpx"
      data-plugin-source="https://plugin/iframe/url"
      data-width="undefinedpx"
      setdashboarditemdetails="function"
    />
  </div>
</div>
`;

exports[`renders a valid widget AppItem 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Scorecard
    </p>
    <div
      class="itemHeaderRightWrap"
    />
  </div>
  <div
    class="content"
  >
    <iframe
      src="https://iframe/app/widget/scorecard?dashboardItemId=applejack"
      title="Scorecard"
    />
  </div>
</div>
`;

exports[`renders a valid widget AppItem when in slideshow 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Scorecard
    </p>
    <div
      class="itemHeaderRightWrap"
    />
  </div>
  <div
    class="content"
  >
    <iframe
      src="https://iframe/app/widget/scorecard?dashboardItemId=applejack"
      title="Scorecard"
    />
  </div>
</div>
`;

exports[`renders a valid widget AppItem with title in edit mode irrespective of app settings 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Scorecard but hide the title
    </p>
    <div
      class="itemHeaderRightWrap"
    >
      <div
        class="itemActionsWrap"
      >
        <div
          class="DeleteItemButton"
        />
      </div>
    </div>
  </div>
  <div
    class="content"
  >
    <iframe
      src="https://iframe/app/widget/scorecard?dashboardItemId=twilightsparkle"
      title="Scorecard but hide the title"
    />
  </div>
</div>
`;

exports[`renders a valid widget AppItem without title in view mode if specified in app settings 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    />
    <div
      class="itemHeaderRightWrap"
    />
  </div>
  <div
    class="content hiddenTitle"
  >
    <iframe
      src="https://iframe/app/widget/scorecard?dashboardItemId=twilightsparkle"
      title="Scorecard but hide the title"
    />
  </div>
</div>
`;

exports[`renders an invalid AppItem 1`] = `
<div>
  <div
    class="messageContent"
  >
    <svg
      color="#a0adba"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.847 2.794l.056.102 8.416 17.674a1 1 0 01-.786 1.423l-.117.007H3.584a1 1 0 01-.947-1.322l.044-.108 8.416-17.674a1 1 0 011.75-.102zM12 5.65L5.167 19.999h13.665zM12 17a1 1 0 110 2 1 1 0 010-2zm1-7v6h-2v-6z"
        fill="currentColor"
      />
    </svg>
    <span>
      The plugin needed to display this item is not available
    </span>
    <span
      class="appLink"
    >
      <a
        href="../dhis-web-app-management/index.html#/app-hub"
        rel="noopener noreferrer"
        target="_blank"
      >
        Install the unknownAppKey plugin from the App Hub
      </a>
    </span>
  </div>
</div>
`;
